--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,48 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
+
+:root {
+  --primary-white: #fff;
+  --primary-pink: #FF69B4;
+  --primary-dark: rgba(255, 255, 255, 0);
+}
+
+body {
+  font-family: "Roboto Condensed" sans-serif;
+}
+
+/*** HEADER/NAVBAR ***/
+nav a.nav-link {
+  font-weight: 500;
+  letter-spacing: 00.0375rem;
+  cursor: pointer;
+}
+
+nav ul li {
+  text-transform: uppercase;
+}
+
+.navbar-nav > li > a {
+  margin-right: 0.75rem;
+  margin-left: 0.75rem;
+  color: var(--primary-white) !important;
+  border-top: 0.1875rem solid var(--primary-dark);
+}
+
+.navbar-brand {
+  color: var(--primary-white) !important;
+  font-family: "Roboto Condensed" sans-serif !important;
+
+}
+
+.navbar-nav > li > a.active, .navbar-nav > li > a:focus {
+  border-top: 0.1875rem solid var(--primary-pink);
+}
+
+.navbar-nav > li > a:hover {
+  border-top: 0.1875rem solid var(--primary-pink);
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +79,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
